fix: 메트릭이 없는 센서도 배치 조회 결과에 포함